--- a/src/compenents/Main.module.scss
+++ b/src/compenents/Main.module.scss
@@ -1,6 +1,6 @@
 .card{
-    padding:10px;
+    // padding:10px;
     border-radius: 30px;
-    margin: 10px;
+    margin: 20px;
     overflow: hidden;
 }
